# task-manager-axum

./: LICENSE  README.md
backend/: .gitignore  Cargo.toml
backend/TaskManagerApp/: 000208.sst  000211.sst  000216.sst  IDENTITY  MANIFEST-000218  OPTIONS-000220
backend/src/: main.rs  schedule_helper.rs  task_helper.rs
frontend/: Cargo.toml  Dioxus.toml
frontend/assets/: main.css  tailwind.css
frontend/src/: backend_connector.rs  backend_helper.rs  main.rs
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs
