[package]
name = "TaskFlow"
version = "0.0.8"
authors = ["SeerBlazeJ <kaivanmehta957@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
dioxus = { version = "0.7.1", features = ["router"] }
dioxus-router = "0.7.1"
futures = "0.3.31"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
